# cookiecutter-django-ninja

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/backend/api/: api.py
src/backend/project/: asgi.py  settings.py  wsgi.py
src/project/: settings.py
