[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Szepietowski", email = "joshSzep@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django-ninja>=1.3.0",
    "django>=5.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
